crates/host-macros/tests/compile_fail/program_without_deployment.rs
omnia_host_macros::runtime!({
    mode: command,
    program: "mytool",
    resolver: CacheResolver::new(),
});

fn main() {}
